refactor: :recycle: change route from /api/auth to /api/auth/login
